--- a/src/app/components/admin/user-details/user-details.component.html
+++ b/src/app/components/admin/user-details/user-details.component.html
@@ -92,10 +92,10 @@
       <thead>
         <tr>
           <th>{{ "shared.entity.id" | translate }}</th>
-          <th>{{ "room.title" | translate }}</th>
+          <th>{{ "shared.form.title" | translate }}</th>
           <th>{{ "room.type" | translate }}</th>
           <th>{{ "room.floor" | translate }}</th>
-          <th>{{ "room.price" | translate }}</th>
+          <th>{{ "shared.form.price" | translate }}</th>
           <th>{{ "shared.action.key-name" | translate }}</th>
         </tr>
       </thead>
