--- a/src/app/components/shared/room-details/room-details.component.html
+++ b/src/app/components/shared/room-details/room-details.component.html
@@ -77,7 +77,7 @@
       <div class="data-section full-width">
         <p class="data-title">
           <i class="fa-solid fa-circle-info"></i>
-          {{ "room.details" | translate }}:
+          {{ "shared.form.details" | translate }}:
         </p>
         <p class="data">{{ room?.details }}</p>
       </div>
