--- a/src/app/components/shared/rooms/rooms.component.html
+++ b/src/app/components/shared/rooms/rooms.component.html
@@ -60,7 +60,7 @@
           >
         </div>
         <div>
-          <strong class="me-2">{{ "room.price" | translate }}:</strong
+          <strong class="me-2">{{ "shared.form.price" | translate }}:</strong
           >{{ room.price | currency : "USD" : "symbol" : "1.0-0" }}
         </div>
       </div>
