--- a/src/app/components/shared/rooms/rooms.component.scss
+++ b/src/app/components/shared/rooms/rooms.component.scss
@@ -62,6 +62,7 @@
   cursor: pointer;
   color: red;
   padding: 4px;
+  text-shadow: 2px 2px 20px black;
 }
 
 .info-icon {
@@ -71,6 +72,7 @@
   cursor: pointer;
   color: $color-cream;
   padding: 4px;
+  text-shadow: 2px 2px 20px black;
 }
 
 .icon-img {
