--- a/src/app/components/admin/add-employee/add-employee.component.html
+++ b/src/app/components/admin/add-employee/add-employee.component.html
@@ -50,7 +50,7 @@
               class="form-control"
               placeholder="Email"
               aria-label="Email"
-              placeholder="example@gmail.com"
+              placeholder="mail@gmail.com"
               formControlName="email"
               required
               email
