--- a/src/app/components/customer/my-reservations/my-reservations.component.html
+++ b/src/app/components/customer/my-reservations/my-reservations.component.html
@@ -1,4 +1,3 @@
-
 <ngb-toast
   *ngIf="showToast"
   [class]="toastClass + ' position-fixed top-0 end-0 m-3'"
@@ -53,6 +52,15 @@
             >
               Cancel Reservation
             </button>
+            <!-- زر View Services يظهر فقط إذا تمت الموافقة على الحجز -->
+            <a
+              class="btn btn-primary btn-sm ms-2"
+              *ngIf="reservation.approvalStatus === 'Approved'"
+              [routerLink]="['/available-services']"
+              [queryParams]="{ hotel: reservation.room.hotel }"
+            >
+              View Services
+            </a>
           </div>
         </div>
       </div>
@@ -61,8 +69,7 @@
 
   <ng-template #noReservations>
     <div *ngIf="reservations.length === 0" class="alert alert-info mt-3">
-  You have no reservations yet.
-</div>
+      You have no reservations yet.
+    </div>
   </ng-template>
 </div>
-
