--- a/src/app/components/shared/room-details/room-details.component.html
+++ b/src/app/components/shared/room-details/room-details.component.html
@@ -82,17 +82,58 @@
         <p class="data">{{ room?.details }}</p>
       </div>
     </div>
-  </div>
-  <button
-    class="mt-4 ms-4 me-4 p-2 btn-outline-primary rounded-2"
-    (click)="goBack()"
-    [title]="'shared.action.go-back' | translate"
-  >
-    @if(lang == 'ar') {
-    <i class="fa-solid fa-arrow-right"></i>
-    } @else {
-    <i class="fa-solid fa-arrow-left"></i>
+    <!-- Approved Services Section -->
+    <div class="mt-5">
+      <h4 class="mb-3">
+        <i class="fa-solid fa-concierge-bell me-2"></i>
+        Approved Services
+      </h4>
+
+      <div *ngIf="approvedServices.length > 0; else noServices">
+        <ul class="list-group">
+          <li
+            *ngFor="let service of approvedServices"
+            class="list-group-item d-flex justify-content-between align-items-start flex-column flex-md-row gap-2"
+          >
+            <div>
+              <i class="fa-solid fa-circle-check text-success me-2"></i>
+              <strong>{{ service.title }}</strong>
+              <span class="badge bg-info text-dark ms-2">{{
+                service.requestStatus
+              }}</span>
+            </div>
+            <small class="text-muted align-self-end">
+              <i class="fa-regular fa-calendar-days me-1"></i>
+              {{ service.date | date : "fullDate" }} -
+              {{ service.date | date : "shortTime" }}
+            </small>
+          </li>
+        </ul>
+      </div>
+      <ng-template #noServices>
+        <p class="text-muted mt-3">
+          No approved or active services for this room.
+        </p>
+      </ng-template>
+
+    </div>
+   
+    @if(role != 'Admin'){
+    <button class="book-btn btn-primary" (click)="bookRoom(room!)">
+      Book Now
+    </button>
     }
-    {{ "shared.action.go-back" | translate }}
-  </button>
+  </div>
+   <button
+      class="mt-4 ms-4 me-4 p-2 btn-outline-primary rounded-2"
+      (click)="goBack()"
+      [title]="'shared.action.go-back' | translate"
+    >
+      @if(lang == 'ar') {
+      <i class="fa-solid fa-arrow-right"></i>
+      } @else {
+      <i class="fa-solid fa-arrow-left"></i>
+      }
+      {{ "shared.action.go-back" | translate }}
+    </button>
 </div>
