--- a/src/app/components/admin/add-room/add-room.component.html
+++ b/src/app/components/admin/add-room/add-room.component.html
@@ -299,7 +299,7 @@
 
   <button
     class="mt-4 ms-4 btn-outline-primary rounded-2"
-    (click)="goBack()"
+    [routerLink]="['/rooms']" routerLinkActive="router-link-active" 
     [title]="'shared.action.go-back' | translate"
   >
     @if(lang == 'ar') {
