--- a/src/app/components/employee/edit-service/edit-service.component.html
+++ b/src/app/components/employee/edit-service/edit-service.component.html
@@ -197,7 +197,8 @@
 
   <button
     class="mt-4 ms-4 btn-outline-primary rounded-2"
-    (click)="goBack()"
+    [routerLink]="['/employee/services']"
+    routerLinkActive="router-link-active"
     [title]="'shared.action.go-back' | translate"
   >
     @if(lang == 'ar') {
