Fix ServiceType Dropdown List

--- a/src/app/components/employee/service-form/service-form.component.html
+++ b/src/app/components/employee/service-form/service-form.component.html
@@ -49,7 +49,7 @@
               </span>
             </div>
             <select
-              class="form-control type-input"
+              class="type-input"
               aria-label="Service Type"
               formControlName="serviceType"
               required
@@ -62,15 +62,6 @@
               <option [value]="servicesType">{{ servicesType }}</option>
               }
             </select>
-
-            <div class="input-group-append align-self-center">
-              <span class="input-group-right-icons align-self-center bg-white">
-                <i
-                  class="fa-solid fa-chevron-down fa-sm mt-3 mb-3"
-                  title="Select Service Type"
-                ></i>
-              </span>
-            </div>
           </div>
           <div
             class="error"
