--- a/src/app/components/employee/service-form/service-form.component.scss
+++ b/src/app/components/employee/service-form/service-form.component.scss
@@ -50,6 +50,7 @@ label {
   font-size: 16px;
   border: 2px $color-dark-brown solid;
   border-right: none;
+  border-radius: 5px 0px 0px 5px;
 }
 
 input,
@@ -64,8 +65,25 @@ select {
 }
 
 .type-input {
-  border-right: none;
-  margin-right: 0px;
+  position: relative;
+  flex: 1 1 auto;
+  width: 1%;
+  min-width: 0;
+}
+
+select {
+  background: url("data:image/svg+xml,<svg height='10px' width='10px' viewBox='0 0 16 16' fill='%23000000' xmlns='http://www.w3.org/2000/svg'><path d='M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z'/></svg>")
+    no-repeat;
+  background-position: calc(100% - 0.75rem) center !important;
+  -moz-appearance: none !important;
+  -webkit-appearance: none !important;
+  appearance: none !important;
+}
+
+select:focus {
+  border: 2px $color-dark-brown solid;
+  outline: none;
+  border-left: none;
 }
 
 .right-input .input-group-icon {
@@ -91,10 +109,6 @@ select {
   outline: none !important;
   border: 2px $color-dark-brown solid;
   border-left: none;
-}
-
-.type-input:focus {
-  border-right: none;
 }
 
 .error {
