--- a/src/app/components/admin/add-employee/add-employee.component.html
+++ b/src/app/components/admin/add-employee/add-employee.component.html
@@ -1,245 +1,199 @@
 <div class="page">
-  <h1 class="m-4 mb-4">{{ "profile.add-employee" | translate }}</h1>
+  <h1 class="m-4 mb-4 text-center">{{ "profile.add-employee" | translate }}</h1>
   <div class="center-wrapper">
     <form
       class="container p-4"
       [formGroup]="profileForm"
       (ngSubmit)="addEmployee()"
     >
-      <div class="input-container">
-        <label for="name"> {{ "profile.name" | translate }}:</label>
-        <div class="input-error">
-          <div class="input-group" [ngClass]="{ 'right-input': lang == 'ar' }">
-            <div class="align-self-center">
-              <span class="input-group-text align-self-center bg-white"
-                ><i class="fa-solid fa-user"></i>
-              </span>
-            </div>
-            <input
-              type="text"
-              class="form-control"
-              placeholder="Name"
-              aria-label="Name"
-              [placeholder]="'profile.name' | translate"
-              formControlName="name"
-              required
-            />
-          </div>
-          <div
-            class="error"
-            *ngIf="
-              profileForm.get('name')?.invalid &&
-              profileForm.get('name')?.touched
-            "
-          >
-            {{ "profile.name-required" | translate }}
-          </div>
+      <div class="input-group" [ngClass]="{ 'right-input': lang == 'ar' }">
+        <div class="align-self-center">
+          <span class="input-group-text align-self-center bg-white"
+            ><i class="fa-solid fa-user"></i>
+          </span>
         </div>
-      </div>
-      <div class="input-container">
-        <label for="email">{{ "profile.email" | translate }}:</label>
-        <div class="input-error">
-          <div class="input-group" [ngClass]="{ 'right-input': lang == 'ar' }">
-            <div class="align-self-center">
-              <span class="input-group-text align-self-center bg-white"
-                ><i class="fa-solid fa-envelope"></i>
-              </span>
-            </div>
-            <input
-              type="email"
-              class="form-control"
-              placeholder="Email"
-              aria-label="Email"
-              placeholder="mail@gmail.com"
-              formControlName="email"
-              required
-              email
-            />
-          </div>
-          <div
-            class="error"
-            *ngIf="
-              profileForm.get('email')?.invalid &&
-              profileForm.get('email')?.touched
-            "
-          >
-            {{ "profile.email-required" | translate }}
-          </div>
-        </div>
-      </div>
-      <div class="input-container">
-        <label for="phone">{{ "profile.phone" | translate }}:</label>
-        <div class="input-error">
-          <div class="input-group" [ngClass]="{ 'right-input': lang == 'ar' }">
-            <div class="align-self-center">
-              <span class="input-group-text align-self-center bg-white">
-                <i class="fa-solid fa-phone"></i>
-              </span>
-            </div>
-            <input
-              appPhoneFormat
-              type="text"
-              class="form-control"
-              placeholder="e.g. 079-123 4567"
-              aria-label="Phone"
-              [placeholder]="'profile.phone' | translate"
-              formControlName="phone"
-              required
-            />
-          </div>
-          <div
-            class="error"
-            *ngIf="
-              profileForm.get('phone')?.invalid &&
-              profileForm.get('phone')?.touched
-            "
-          >
-            {{ "profile.phone-required" | translate }}
-          </div>
-        </div>
-      </div>
-      <div class="input-container">
-        <label for="jobTitle"> {{ "profile.job-title" | translate }}:</label>
-        <div class="input-error">
-          <div class="input-group" [ngClass]="{ 'right-input': lang == 'ar' }">
-            <div class="align-self-center">
-              <span class="input-group-text align-self-center bg-white">
-                <i class="fa-solid fa-briefcase"></i>
-              </span>
-            </div>
-            <input
-              type="text"
-              class="form-control"
-              placeholder="Job Title"
-              aria-label="Job Title"
-              [placeholder]="'profile.job-title' | translate"
-              formControlName="jobTitle"
-              required
-            />
-          </div>
-          <div
-            class="error"
-            *ngIf="
-              profileForm.get('jobTitle')?.invalid &&
-              profileForm.get('jobTitle')?.touched
-            "
-          >
-            {{ "profile.job-required" | translate }}
-          </div>
-        </div>
-      </div>
-      <div class="input-container">
-        <label for="hotel"> {{ "profile.hotel" | translate }}:</label>
-        <div class="input-error">
-          <div class="input-group" [ngClass]="{ 'right-input': lang == 'ar' }">
-            <div class="align-self-center">
-              <span class="input-group-text align-self-center bg-white">
-                <i class="fa-solid fa-hotel"></i>
-              </span>
-            </div>
-            <input
-              type="text"
-              class="form-control"
-              placeholder="Hotel"
-              aria-label="Hotel"
-              [placeholder]="'profile.hotel' | translate"
-              formControlName="hotel"
-              required
-            />
-          </div>
-          <div
-            class="error"
-            *ngIf="
-              profileForm.get('hotel')?.invalid &&
-              profileForm.get('hotel')?.touched
-            "
-          >
-            {{ "profile.hotel-required" | translate }}
-          </div>
-        </div>
-      </div>
-      <div class="input-container">
-        <label for="newPassword"
-          >{{ "profile.new-password" | translate }}:</label
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Name"
+          aria-label="Name"
+          [placeholder]="'profile.name' | translate"
+          formControlName="name"
+          required
+        />
+        <div
+          class="error"
+          *ngIf="
+            profileForm.get('name')?.invalid && profileForm.get('name')?.touched
+          "
         >
-        <div class="input-error">
-          <div class="input-group" [ngClass]="{ 'right-input': lang == 'ar' }">
-            <div class="align-self-center">
-              <span class="input-group-text align-self-center bg-white">
-                <i class="fa-solid fa-lock"></i>
-              </span>
-            </div>
-            <input
-              type="password"
-              class="form-control"
-              [placeholder]="'profile.new-password' | translate"
-              aria-label="Password"
-              formControlName="newPassword"
-              required
-              minlength="6"
-            />
-          </div>
-          <div
-            class="error"
-            *ngIf="
-              profileForm.get('newPassword')?.touched &&
-              profileForm.get('newPassword')?.errors as errors
-            "
-          >
-            <div *ngIf="errors['minlength']">
-              {{ "profile.password-min-length" | translate }}
-            </div>
-            <div *ngIf="errors['required']">
-              {{ "profile.password-required" | translate }}
-            </div>
-          </div>
+          {{ "profile.name-required" | translate }}
         </div>
       </div>
-      <div class="input-container">
-        <label for="confirmPassword"
-          >{{ "profile.confirm-password" | translate }}:</label
+      <div class="input-group" [ngClass]="{ 'right-input': lang == 'ar' }">
+        <div class="align-self-center">
+          <span class="input-group-text align-self-center bg-white"
+            ><i class="fa-solid fa-envelope"></i>
+          </span>
+        </div>
+        <input
+          type="email"
+          class="form-control"
+          placeholder="Email"
+          aria-label="Email"
+          [placeholder]=""
+          formControlName="email"
+          required
+          email
+        />
+        <div
+          class="error"
+          *ngIf="
+            profileForm.get('email')?.invalid &&
+            profileForm.get('email')?.touched
+          "
         >
-        <div class="input-error">
-          <div class="input-group" [ngClass]="{ 'right-input': lang == 'ar' }">
-            <div class="align-self-center">
-              <span class="input-group-text align-self-center bg-white">
-                <i class="fa-solid fa-check-double"></i>
-              </span>
-            </div>
-            <input
-              type="password"
-              class="form-control"
-              aria-label="Password"
-              [placeholder]="'profile.confirm-password' | translate"
-              formControlName="confirmPassword"
-              required
-              minlength="6"
-            />
+          {{ "profile.email-required" | translate }}
+        </div>
+      </div>
+      <div class="input-group" [ngClass]="{ 'right-input': lang == 'ar' }">
+        <div class="align-self-center">
+          <span class="input-group-text align-self-center bg-white">
+            <i class="fa-solid fa-phone"></i>
+          </span>
+        </div>
+        <input
+          appPhoneFormat
+          type="text"
+          class="form-control"
+          placeholder="e.g. 079-123 4567"
+          aria-label="Phone"
+          [placeholder]="'profile.phone' | translate"
+          formControlName="phone"
+          required
+        />
+        <div
+          class="error"
+          *ngIf="
+            profileForm.get('phone')?.invalid &&
+            profileForm.get('phone')?.touched
+          "
+        >
+          {{ "profile.phone-required" | translate }}
+        </div>
+      </div>
+      <div class="input-group" [ngClass]="{ 'right-input': lang == 'ar' }">
+        <div class="align-self-center">
+          <span class="input-group-text align-self-center bg-white">
+            <i class="fa-solid fa-briefcase"></i>
+          </span>
+        </div>
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Job Title"
+          aria-label="Job Title"
+          [placeholder]="'profile.job-title' | translate"
+          formControlName="jobTitle"
+          required
+        />
+        <div
+          class="error"
+          *ngIf="
+            profileForm.get('jobTitle')?.invalid &&
+            profileForm.get('jobTitle')?.touched
+          "
+        >
+          {{ "profile.job-required" | translate }}
+        </div>
+      </div>
+      <div class="input-group" [ngClass]="{ 'right-input': lang == 'ar' }">
+        <div class="align-self-center">
+          <span class="input-group-text align-self-center bg-white">
+            <i class="fa-solid fa-hotel"></i>
+          </span>
+        </div>
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Hotel"
+          aria-label="Hotel"
+          [placeholder]="'profile.hotel' | translate"
+          formControlName="hotel"
+          required
+        />
+        <div
+          class="error"
+          *ngIf="
+            profileForm.get('hotel')?.invalid &&
+            profileForm.get('hotel')?.touched
+          "
+        >
+          {{ "profile.hotel-required" | translate }}
+        </div>
+      </div>
+      <div class="input-group" [ngClass]="{ 'right-input': lang == 'ar' }">
+        <div class="align-self-center">
+          <span class="input-group-text align-self-center bg-white">
+            <i class="fa-solid fa-lock"></i>
+          </span>
+        </div>
+        <input
+          type="password"
+          class="form-control"
+          [placeholder]="'profile.new-password' | translate"
+          aria-label="Password"
+          formControlName="newPassword"
+          required
+          minlength="6"
+        />
+        <div
+          class="error"
+          *ngIf="
+            profileForm.get('newPassword')?.touched &&
+            profileForm.get('newPassword')?.errors as errors
+          "
+        >
+          <div *ngIf="errors['minlength']">
+            {{ "profile.password-min-length" | translate }}
           </div>
-          <div
-            class="error"
-            *ngIf="
-              profileForm.get('confirmPassword')?.valueChanges &&
-              profileForm.get('confirmPassword')?.value !=
-                profileForm.get('newPassword')?.value
-            "
-          >
-            {{ "profile.password-match" | translate }}
+          <div *ngIf="errors['required']">
+            {{ "profile.password-required" | translate }}
           </div>
         </div>
       </div>
-
-      <div class="input-container">
-        <label></label>
-        <div class="input-error">
-          <button
-            class="mt-4 btn-submit"
-            [title]="'profile.submit' | translate"
-          >
-            {{ "profile.submit" | translate }}
-          </button>
+      <div class="input-group" [ngClass]="{ 'right-input': lang == 'ar' }">
+        <div class="align-self-center">
+          <span class="input-group-text align-self-center bg-white">
+            <i class="fa-solid fa-check-double"></i>
+          </span>
+        </div>
+        <input
+          type="password"
+          class="form-control"
+          aria-label="Password"
+          [placeholder]="'profile.confirm-password' | translate"
+          formControlName="confirmPassword"
+          required
+          minlength="6"
+        />
+        <div
+          class="error"
+          *ngIf="
+            profileForm.get('confirmPassword')?.valueChanges &&
+            profileForm.get('confirmPassword')?.value !=
+              profileForm.get('newPassword')?.value
+          "
+        >
+          {{ "profile.password-match" | translate }}
         </div>
       </div>
+      <button
+        class="mt-4 btn-primary ps-4 pe-4"
+        [title]="'profile.submit' | translate"
+      >
+        {{ "profile.submit" | translate }}
+      </button>
     </form>
   </div>
 
