--- a/src/app/components/admin/add-employee/add-employee.component.scss
+++ b/src/app/components/admin/add-employee/add-employee.component.scss
@@ -1,7 +1,7 @@
 @import "../../../../styles/variables.scss";
 
 .page {
-  max-width: 900px;
+  max-width: 800px;
   width: auto;
   margin-left: auto;
   margin-right: auto;
@@ -22,25 +22,13 @@
   justify-content: center;
   width: 100%;
   border-radius: 10px;
-  max-width: 900px;
+  max-width: 800px;
 }
 
-.input-container {
-  display: flex;
-  justify-content: center;
+.input-group {
+  width: 60%;
   align-items: center;
-}
-
-.input-error {
-  width: 50%;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-}
-
-label {
-  width: 25%;
+  align-self: center;
 }
 
 .input-group-text {
@@ -86,7 +74,8 @@ input {
   text-align: start;
   width: 100%;
   font-size: 14px;
-  margin: -6px 10px 10px 50px;
+  margin: -6px 20px 8px;
+  padding-left: 15px;
   font-weight: bold;
 }
 
