--- a/src/app/components/admin/room-form/room-form.component.scss
+++ b/src/app/components/admin/room-form/room-form.component.scss
@@ -25,22 +25,10 @@
   max-width: 900px;
 }
 
-.input-container {
-  display: flex;
-  justify-content: center;
+.input-group {
+  width: 60%;
   align-items: center;
-}
-
-.input-error {
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-label {
-  width: 25%;
+  align-self: center;
 }
 
 .input-group-icon {
@@ -64,7 +52,7 @@ input {
 
 .radio-container {
   margin: 10px 5px;
-  padding: 0px;
+  padding: 7px;
   border: 2px $color-dark-brown solid;
   border-radius: 5px;
   border-left: none;
@@ -77,6 +65,7 @@ input {
 
 .radio-input {
   width: 20%;
+  margin: 0;
 }
 
 .right-input .input-group-icon {
@@ -104,14 +93,17 @@ input {
   border-left: none;
 }
 
+
 .error {
   color: $color-red;
   text-align: start;
   width: 100%;
   font-size: 14px;
-  margin: -6px 10px 10px 50px;
+  margin: -6px 20px 8px;
+  padding-left: 15px;
   font-weight: bold;
 }
+
 
 .images-urls-inputs {
   width: 50%;
