--- a/src/app/components/employee/service-form/service-form.component.html
+++ b/src/app/components/employee/service-form/service-form.component.html
@@ -128,13 +128,14 @@
           </span>
         </div>
         <input
-          type="text"
+          type="file"
           class="form-control"
           placeholder="Image URL"
           aria-label="Image URL"
           [placeholder]="'shared.form.image-url' | translate"
           formControlName="imageUrl"
           required
+          (change)="onFileSelected($event)"
         />
         <div
           class="error"
